--- a/cfp.html
+++ b/cfp.html
@@ -147,8 +147,8 @@
             <p><a href="https://www.acm.org"><img src="http://mobiquitous.org/2016/media/sponsor-images/ACM-In-Cooperation_large.gif" align="middle" style="height: 90px;width: 100%; max-width: 240px"></a>&nbsp;&nbsp;<a href="http://www.sigcomm.org/"><img src="images/sigcomm.png" align="middle" style="width: 50%; max-width: 80px">&nbsp;&nbsp;</a> <a href="https://www.sigmobile.org/"><img src="images/sigmobile.gif" align="middle" style="width: 50%; max-width: 80px"></a></p>
           </div>
           <div class="col-1">
-            <h4>Industrial Sponsors</h4>
-						<p><a href="https://www.huawei.com"><img src="./images/huawei.png" align="middle" style="height: 90px;max-width: 240px"></a></p>
+            <h4>Industrial Supporters</h4>
+						<p><a href="https://www.huawei.com"><img src="./images/huawei.png" align="middle" style="height: 90px;max-width: 240px"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.tencent.com"><img src="./images/tencent.png" align="middle" style="height: 90px;max-width: 240px"></a></p>
           </div>
         </div>
 
