--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <h1>1<sup>st</sup> Asia-Pacific Workshop on Networking (APNet 2017)</h1>
         <h2>August 3-4 2017, Hong Kong, China</h2>
       </div>
-      <script type="text/javascript">
+      <!--script type="text/javascript">
       try{
           if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
               window.location.href="index-mobile.html";
           }
       }catch(e){}
-      </script>
+      </script-->
     </header>
     <div id="content-wrapper">
       <div class="inner clearfix">
@@ -134,8 +134,8 @@
             <p><a href="https://www.acm.org"><img src="http://mobiquitous.org/2016/media/sponsor-images/ACM-In-Cooperation_large.gif" align="middle" style="height: 90px;width: 100%; max-width: 240px"></a>&nbsp;&nbsp;<a href="http://www.sigcomm.org/"><img src="images/sigcomm.png" align="middle" style="width: 50%; max-width: 80px">&nbsp;&nbsp;</a> <a href="https://www.sigmobile.org/"><img src="images/sigmobile.gif" align="middle" style="width: 50%; max-width: 80px"></a></p>
           </div>
           <div class="col-1">
-            <h4>Industrial Sponsors</h4>
-						<p><a href="https://www.huawei.com"><img src="./images/huawei.png" align="middle" style="height: 90px;max-width: 240px"></a></p>
+            <h4>Industrial Supporters</h4>
+						<p><a href="https://www.huawei.com"><img src="./images/huawei.png" align="middle" style="height: 90px;max-width: 240px"></a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.tencent.com"><img src="./images/tencent.png" align="middle" style="height: 90px;max-width: 240px"></a></p>
           </div>
         </div>
 
