--- a/call_for_posters.html
+++ b/call_for_posters.html
@@ -177,6 +177,15 @@
 					<ul>
 		              <li>To Be Announced</li>
 		            </ul>
+						<p>Kazuya Okada (University of Tokyo, Japan)</p>
+<p>Deke Guo (National University of Defense Technology, China)</p>
+<p>Suk-Bok Lee (Hangyang University, Korea)</p>
+<p>Chengchen Hu (Xi'an Jiaotong University, China)</p>
+<p>Min Suk Kang (National University of Singapore, Singapore)</p>
+<p>Hanhua Chen (Huazhong University of Science and Technology, China)</p>
+<p>Barry Wu (University of Canterbury, New Zealand)</p>
+<p>Yang Chen (Fudan University, China)</p>
+<p>Fan Wu (Shanghai Jiaotong University, China)</p>
 					</div>
 				</div>
 			</div>
