--- a/cfposter.html
+++ b/cfposter.html
@@ -82,7 +82,15 @@
             <p><a href="http://cs.nju.edu.cn/tianchen/">Chen Tian</a> (Nanjing University, China)</p>
             <p><a href="http://www.cs.cityu.edu.hk/~hxu/">Henry Xu</a> (City University of Hong Kong, China)</p>
             <h2>Program Commitee</h2>
-            <p><a href="http://www.cs.cityu.edu.hk/~hxu/">To Be Announced</a></p>
+            <p><a href="https://loppy.org/">Kazuya Okada</a> (University of Tokyo, Japan)</p>
+<p><a href="http://www.greenorbs.org/people/liu/guodeke/index.html">Deke Guo</a> (National University of Defense Technology, China)</p>
+<p><a href="https://sites.google.com/site/sukboklee/">Suk-Bok Lee</a> (Hangyang University, Korea)</p>
+<p><a href="http://nskeylab.xjtu.edu.cn/people/cchu/">Chengchen Hu</a> (Xi'an Jiaotong University, China)</p>
+<p><a href="http://www.comp.nus.edu.sg/~kangms">Min Suk Kang</a> (National University of Singapore, Singapore)</p>
+<p><a href="http://english.cs.hust.edu.cn/faculty/directory-detail/2796">Hanhua Chen</a> (Huazhong University of Science and Technology, China)</p>
+<p><a href="http://www.wrc.canterbury.ac.nz/people/barry_wu.shtml">Barry Wu</a> (University of Canterbury, New Zealand)</p>
+<p><a href="http://www.cs.fudan.edu.cn/en/?p=7085">Yang Chen</a> (Fudan University, China)</p>
+<p><a href="http://www.cs.sjtu.edu.cn/~fwu/">Fan Wu</a> (Shanghai Jiaotong University, China)</p>
 
           </section>
 
