--- a/oc.html
+++ b/oc.html
@@ -64,6 +64,7 @@
             <p><a href="http://research.microsoft.com/en-us/um/people/padhye/">Jitu Padhye</a> (Microsoft Research, USA)</p>
 
             <h2>Local Chair</h2>
+            <p><a href="http://i.cs.hku.hk/~heming/"> Heming Cui</a> (University of Hong Kong)</p>
             <p><a href="https://www.linkedin.com/in/gong-zhang-2b22baa7">Nicholas Zhang</a> (Huawei, China)</p>
 
             <h2>Poster and Demo Chairs</h2>
