--- a/pc.html
+++ b/pc.html
@@ -87,6 +87,7 @@
             <p><a href="http://eastzone.bitbucket.org/">James Hongyi Zeng</a> (Facebook, USA)</p>
             <p><a href="https://www.linkedin.com/in/ming-zhang-2110241">Ming Zhang</a> (Alibaba, China)</p>
             <p><a href="http://www-users.cs.umn.edu/~zhzhang/">Zhi-Li Zhang</a> (University of Minnesota, USA)</p>
+            <p><a href="http://www.princeton.edu/~liangz/">Liang Zheng</a> (Princeton University, USA)</p>
             <p><a href="http://www.ruf.rice.edu/~lzhong/">Lin Zhong</a> (Rice University, USA)</p>
 
           </section>
