--- a/oc.html
+++ b/oc.html
@@ -79,6 +79,9 @@
             <p><a href="http://www.cs.jhu.edu/~xinjin/">Xin Jin</a> (UC Berkeley and JHU, USA)</p>
             <p><a href="https://nasp.cs.tsinghua.edu.cn/lidan.html">Dan Li</a> (Tsinghua University, China)</p>
             <p><a href="http://nss.kaist.ac.kr/?page_id=29">Seungwon Shin</a> (KAIST, South Korea)</p>
+            
+            <h2>Industrial Liason/Sponsorship Chair</h2>
+            <p><a href="http://www4.comp.polyu.edu.hk/~cshchan/">Henry Chan</a> (Hong Kong Polytechnic University)</p>
 
             <h2>Finance Chairs</h2>
             <p><a href="https://www.cse.ust.hk/~weiwa/">Wei Wang</a> (HKUST, China)</p>
