--- a/oc.html
+++ b/oc.html
@@ -80,7 +80,7 @@
             <p><a href="https://nasp.cs.tsinghua.edu.cn/lidan.html">Dan Li</a> (Tsinghua University, China)</p>
             <p><a href="http://nss.kaist.ac.kr/?page_id=29">Seungwon Shin</a> (KAIST, South Korea)</p>
             
-            <h2>Industrial Liason/Sponsorship Chair</h2>
+            <h2>Industrial Liaison/Sponsorship Chair</h2>
             <p><a href="http://www4.comp.polyu.edu.hk/~cshchan/">Henry Chan</a> (Hong Kong Polytechnic University)</p>
 
             <h2>Finance Chairs</h2>
