--- a/cfp.html
+++ b/cfp.html
@@ -86,12 +86,12 @@
               Submissions must be no longer than 6 pages (10 point font, 12 point leading, 7 inch by 9.25 inch text block)
               including all content and references.
               You can find a .zip file <a href="apnet17.zip">here</a> with the necessary LaTeX files to create a template, as well as the compiled pdf.
-              All submissions must be blind: submissions must not
+              All submissions must be double-blind: submissions must not
               indicate the names or affiliations of the authors in the paper. Only electronic submissions in PDF
               will be accepted. Submissions must be written in English, render without error using standard tools
               (e.g., Acrobat Reader), and print on US Letter paper. Papers must contain novel ideas and must
               differ significantly in content from previously published papers and papers under simultaneous
-              submission.
+              submission (e.g., the extension of APNet submission with complete implemenation/experiments may be submitted simultanously elsewhere).
             </p>
             <p>
               <b>The submission website is coming soon.</b>
