--- a/index.html
+++ b/index.html
@@ -97,7 +97,15 @@
             <h1>
             <a id="visa-info" class="anchor" href="#visa-info" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Visa Info</h1>
             <p>International registrants should be particularly aware and careful about visa requirements, and should plan travel well in advance. All visa inquiries must be handled by ACM headquarters. You can find more information about how to obtain a visa support letter from ACM (<a href="http://conferences.sigcomm.org/">here</a>).</p-->
-            <h1>
+            
+	    <h1>
+            <a id="announcements" class="anchor" href="#announcements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Announcements</h1>
+            <ul>
+              <li>December 28 2016: &nbsp;&nbsp;&nbsp; APNet 2017 website is live!</li>
+              <li>March 3 2017: &nbsp;&nbsp;&nbsp; APNet 2017 <a href="https://apnet17.hotcrp.com/">submission site</a> is live!</li>
+            </ul>	  
+		  
+	    <h1>
             <a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Important Dates</h1>
             <ul>
               <table>
@@ -107,11 +115,7 @@
                 <tr><td>Workshop dates:</td> <td>August 3-4, 2017</td></tr>
               </table>
             </ul>
-            <h1>
-            <a id="announcements" class="anchor" href="#announcements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Announcements</h1>
-            <ul>
-              <li>December 28 2016: &nbsp;&nbsp;&nbsp; APNet 2017 website is live!</li>
-            </ul>
+
 
             <!--h1>
             <a id="sponsors" class="anchor" href="#sponsors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Sponsors</h1-->
