--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <a id="announcements" class="anchor" href="#announcements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Announcements</h1>
             <ul>
               <li>December 28 2016: &nbsp;&nbsp;&nbsp; APNet 2017 website is live!</li>
-              <li>March 3 2017: &nbsp;&nbsp;&nbsp; APNet 2017 <a href="https://apnet17.hotcrp.com/">submission site</a> is live!</li>
+              <li>March 3 2017: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; APNet 2017 <a href="https://apnet17.hotcrp.com/">submission site</a> is live!</li>
             </ul>	  
 		  
 	    <h1>
