--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 	    <h1>
             <a id="announcements" class="anchor" href="#announcements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Announcements</h1>
             <ul>
-              <li>December 28 2016: &emsp; APNet 2017 website is live!</li>
-              <li>March 3 2017: &emsp;&emsp; APNet 2017 <a href="https://apnet17.hotcrp.com/">submission site</a> is live!</li>
+              <li>December 28 2016: APNet 2017 website is live!</li>
+              <li>March 3 2017: APNet 2017 <a href="https://apnet17.hotcrp.com/">submission site</a> is live!</li>
             </ul>	  
 		  
 	    <h1>
