--- a/cfp.html
+++ b/cfp.html
@@ -94,8 +94,7 @@
               submission (e.g., the extension of APNet submission with complete implemenation/experiments may be submitted simultanously elsewhere).
             </p>
             <p>
-              <b>The submission website is coming soon.</b>
-              <!--a href=https://apnet17.hotcrp.com>https://apnet17.hotcrp.com</a> is open for registration and submission -->
+              <a href="https://apnet17.hotcrp.com">https://apnet17.hotcrp.com</a> is open for registration and submission
             </p>
             <h1>Important Dates</h1>
             <table>
