--- a/cfp.html
+++ b/cfp.html
@@ -97,13 +97,12 @@
               submission (e.g., the extension of APNet submission with complete implemenation/experiments may be submitted simultanously elsewhere).
             </p>
             <h1>Important Dates</h1>
-            <table>
-              <tr><td>Abstract registration:</td> <td>April 7, 2017 (11:59PM GMT)</td></tr>
-              <tr><td>Paper submission:</td> <td>April 14, 2017 (11:59 PM GMT)</td></tr>
-              <tr><td>Notification of decision:</td> <td>June 12, 2017</td></tr>
-              <tr><td>Camera-ready submission:</td> <td>July 7, 2017</td></tr>
-              <tr><td>Workshop dates:</td> <td>August 3-4, 2017</td></tr>
-            </table>
+              <table>
+                <tr><td>Abstract registration:</td> <td> <del>April 7, 2017</del> <span style="color:red">*Optional, can register until paper submission deadline*</span></td></tr>
+                <tr><td>Paper submission:</td> <td>April 24, 2017 (11:59 PM GMT) <span style="color:red">*Hard deadline*</span></td></tr>
+                <tr><td>Notification of decision:</td> <td>June 12, 2017</td></tr>
+                <tr><td>Workshop dates:</td> <td>August 3-4, 2017</td></tr>
+              </table>
             <p>
               <h1>Workshop Participation</h1>
               <p>
