--- a/index.html
+++ b/index.html
@@ -65,56 +65,66 @@
               at their early stages. The mission of APNet is that promising but not-yet-mature
               ideas can receive timely feedback from experienced researchers, shaping them into
             major conferences such as SIGCOMM, SOSP, OSDI, NSDI, MobiCom, CoNEXT and so on.</p>
-            <p>We invite submissions of short papers (up to 6 pages, including references) on a wide range of networking research, including, but not limited to:</p>
-            <ul>
-              <li>Network architectures and algorithms</li>
-              <li>Enterprise, datacenter, and storage area networks</li>
-              <li>SDN, NFV, and network programming</li>
-              <li>Network measurement, monitoring, diagnosis</li>
-              <li>Network management and operations</li>
-              <li>Formal methods and network verification</li>
-              <li>Economics and evolution of the Internet</li>
-              <li>Network security and privacy, censorship, transparency</li>
-              <li>Network, transport, and application-layer protocols</li>
-              <li>Networking support for applications</li>
-              <li>Fault-tolerance, reliability, and troubleshooting</li>
-              <li>Operating system support for networking</li>
-              <li>Networking hardware design</li>
-              <li>P2P and content distribution networks</li>
-              <li>Cloud and wide-area networking systems & infrastructure</li>
-              <li>Resource management, QoS, and signaling</li>
-              <li>Routing, traffic engineering, switching, and addressing</li>
-              <li>Wireless and sensor networking</li>
-              <li>Mobile computing and networking</li>
-            </ul>
-            <p>The APNet Program Committee selects papers based on novelty, significance, and technical merit,
+            <p>We invite submissions of short papers (up to 6 pages, including references) on a wide range of networking research topics. For details, see our <a href="cfp.html">Call For Paper</a>.</p>
+            <!--p>The APNet Program Committee selects papers based on novelty, significance, and technical merit,
               rather than completeness. Innovative well-reasoned ideas with preliminary evaluations will suffice for APNet.
               We hope that APNet papers, when substantiated by solid implementation and experimentation,
-            can be accepted by the aforementioned premier conferences.</p>
+            can be accepted by the aforementioned premier conferences.</p-->
             <!--h1>
             <a id="location" class="anchor" href="#location" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Location</h1>
             <p>This workshop will be held in Hong Kong.</p>
             <h1>
             <a id="visa-info" class="anchor" href="#visa-info" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Visa Info</h1>
             <p>International registrants should be particularly aware and careful about visa requirements, and should plan travel well in advance. All visa inquiries must be handled by ACM headquarters. You can find more information about how to obtain a visa support letter from ACM (<a href="http://conferences.sigcomm.org/">here</a>).</p-->
-            
-	    <h1>
-            <a id="announcements" class="anchor" href="#announcements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Announcements</h1>
-            <ul>
-              <li>March 3 2017: APNet 2017 <a href="https://apnet17.hotcrp.com/">submission site</a> is live!</li>
-              <li>December 28 2016: APNet 2017 website is live!</li>
-            </ul>	  
-		  
-	    <h1>
-            <a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Important Dates</h1>
-            <ul>
-              <table>
-                <tr><td>Abstract registration:</td> <td>April 7, 2017 (11:59PM GMT)</td></tr>
-                <tr><td>Paper submission:</td> <td>April 14, 2017 (11:59 PM GMT)</td></tr>
-                <tr><td>Notification of decision:</td> <td>June 12, 2017</td></tr>
-                <tr><td>Workshop dates:</td> <td>August 3-4, 2017</td></tr>
-              </table>
-            </ul>
+
+            <h1 style="margin-top: 0px">
+            <a id="keynote" class="anchor" href="#keynote" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Keynote Speakers</h1>
+
+            <div style="background-color:#eaeaea; margin:2em 0;border-radius:10px; height:auto;">
+              <div style="padding:8px; padding-right:15px; width:26%; float:left;">
+              <img style="border-style: solid;border-width: 4px;border-color: #ffffff;" src="images/cx.jpg" />
+              </div>
+
+              <div style="padding:1em 1em;text-align:left;">
+              <h2><a href="https://www.microsoft.com/en-us/research/people/chguo/">Chuanxiong Guo</a></h2>
+              <p style="text-align:left;font-size:14pt">Principal Researcher at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a></p>
+              <h2>Keynote Talk:</h2>
+              <p style="text-align:left;font-size:14pt">RDMA in Data Centers: Looking Back and Looking Forward</p>
+              <p style="text-align:right;padding-right:2em;"><a href="cx.html">more...</a></p>
+              </div>
+            </div>
+
+            <div style="background-color:#eaeaea; margin:2em 0;border-radius:10px; height:auto;">
+              <div style="padding:8px; padding-right:15px; width:26%; float:left;">
+              <img style="border-style: solid;border-width: 4px;border-color: #ffffff;" src="images/chang.jpg" />
+              </div>
+
+              <div style="padding:1em 1em;text-align:left;">
+              <h2><a href="https://www.linkedin.com/in/changhoon-kim-b3394317">Changhoon Kim</a></h2>
+              <p style="text-align:left;font-size:14pt">Director of Architecture at <a href="https://www.barefootnetworks.com/">Barefoot Networks</a></p>
+              <h2>Keynote Talk:</h2>
+              <p style="text-align:left;font-size:14pt">Why Data-plane Will Be Programmable: New Paradigms and Use Cases In Networking</p>
+              <p style="text-align:right;padding-right:2em;"><a href="chang.html">more...</a></p>
+              </div>
+            </div>
+
+            <h1><a id="announcements" class="anchor" href="#announcements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Announcements</h1>
+                  <ul>
+                    <li>May 3 2017: We are delighted to accounce that <a href="cx.html">Chuanxiong Guo</a> and <a href="chang.html">Changhoon Kim</a> are our Keynote Speakers!</li>
+                    <li>April 19 2017: Due to SOSP clash, deadline extended till Monday, April 24</li>
+                    <li>March 3 2017: APNet 2017 <a href="https://apnet17.hotcrp.com/">submission site</a> is live!</li>
+                    <li>December 28 2016: APNet 2017 website is live!</li>
+                  </ul>
+
+            <h1><a id="important-dates" class="anchor" href="#important-dates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Important Dates</h1>
+                  <ul>
+                    <table>
+                      <tr><td>Abstract registration:</td> <td> <del>April 7, 2017</del> <span style="color:red">*Optional, can register until paper submission deadline*</span></td></tr>
+                      <tr><td>Paper submission:</td> <td>April 24, 2017 (11:59 PM GMT) <span style="color:red">*Hard deadline*</span></td></tr>
+                      <tr><td>Notification of decision:</td> <td>June 12, 2017</td></tr>
+                      <tr><td>Workshop dates:</td> <td>August 3-4, 2017</td></tr>
+                    </table>
+                  </ul>
 
 
             <!--h1>
